<resources>
    <string name="app_name">DML</string>
    <string name="facebook_app_id">1971897396448744</string>
    <string name="fb_login_protocol_scheme">fb1971897396448744</string>

    <string name="common_ok">OK</string>
    <string name="no_network_title">No network</string>
    <string name="no_network">No network</string>
    <string name="agree_tnc">I agree to the Terms &#38; Conditions</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="current_balance">Current Balance</string>

    <string name="error_email_format">Invalid email format</string>
    <string name="error_password_format">Password should have at least 8 digits</string>

    <string name="welcome_title">Decentralized\nMachine Learning</string>
    <string name="welcome_desc">Get paid for your date, on your terms.</string>
    <string name="welcome_button_sign_up">Sign up</string>
    <string name="welcome_button_login">Log in</string>

    <string name="fragment_signup_email">Email</string>
    <string name="fragment_signup_password">Password</string>
    <string name="fragment_signup_referral_code">Referral code (if any)</string>
    <string name="fragment_signup_button_sign_up">Sign up</string>
    <string name="fragment_signup_or">OR</string>
    <string name="fragment_signup_learn_more">Learn more</string>

    <string name="fragment_signup_google_desc">Thanks for connecting your Google account. In order to encrypt your private key (the thing that will protect your tokens), you need to also create a password. </string>

    <string name="fragment_signup_security_question_title">Setup security questions</string>
    <string name="fragment_signup_security_question_desc">Please choose your questions and answers that can be used to verify your identity in case you forget your password.</string>
    <string name="fragment_signup_security_question_1">Question #1</string>
    <string name="fragment_signup_security_question_2">Question #2</string>
    <string name="fragment_signup_security_button_save">Save answers</string>

    <string name="fragment_signup_information_title">Tell us about yourself</string>
    <string name="fragment_signup_information_button_later">Remind me later</string>
    <string name="fragment_signup_information_first_name">First name</string>
    <string name="fragment_signup_information_last_name">Last name</string>
    <string name="fragment_signup_information_country">Country</string>
    <string name="fragment_signup_information_date_of_birth">Date of Birth</string>
    <string name="fragment_signup_information_gender">Gender</string>
    <string name="fragment_signup_information_male">Male</string>
    <string name="fragment_signup_information_female">Female</string>
    <string name="fragment_signup_information_other">N/A</string>
    <string name="fragment_signup_information_education_level">Education Level</string>
    <string name="fragment_signup_information_button_next">Next</string>

    <string name="fragment_signup_connect_title">Connect with us</string>
    <string name="fragment_signup_connect_desc">Please connect your data sources in order to start earning DML tokens. If you change you’re mind, you’ll be able to revoke access at any time.</string>
    <string name="fragment_signup_connect_sms">SMS</string>
    <string name="fragment_signup_connect_camera_roll">Camera Roll</string>
    <string name="fragment_signup_connect_address_book">Address Book</string>

    <string name="fragment_signup_complete_title">Thank you!</string>
    <string name="fragment_signup_complete_desc">Because you connected all your data sources, you just earned 100 DML. Check out your DML wallet to learn more.</string>
    <string name="fragment_signup_complete_button_check_out">Check out your wallet</string>

    <string name="fragment_signup_create_wallet_title">Your wallet</string>
    <string name="fragment_signup_create_wallet_desc">These 12 words are the only way to restore your wallet. Save them somewhere safe and secret.</string>

    <string-array name="array_education_level">
        <item name="primary">Primary</item>
        <item name="secondary">Secondary</item>
        <item name="associates">Associate\'s</item>
        <item name="bachelors">Bachelor\'s</item>
        <item name="masters">Master\'s</item>
        <item name="doctorate">Doctorate or higher</item>
    </string-array>

    <string-array name="array_education_level_value">
        <item name="primary">primary</item>
        <item name="secondary">secondary</item>
        <item name="associates">associates</item>
        <item name="bachelors">bachelors</item>
        <item name="masters">masters</item>
        <item name="doctorate">doctorate</item>
    </string-array>

    <string name="fragment_transaction_toolbar_title">Transactions</string>

    <string name="fragment_transaction_detail_toolbar_title">Transaction Detail</string>
    <string name="fragment_transaction_detail_to">To (Wallet Address)</string>
    <string name="fragment_transaction_detail_memo">Memo</string>
    <string name="fragment_transaction_detail_time">Time</string>
    <string name="fragment_transaction_detail_network_fee">Network Fee</string>
    <string name="fragment_transaction_detail_transaction_hash">Transaction Hash</string>
    <string name="fragment_transaction_detail_amount">Amount</string>
    <string name="fragment_transaction_detail_button_cancel_pending_transaction">Cancel Pending Transaction</string>

    <string name="fragment_wallet_button_cash_out">Cash out</string>

    <string name="fragment_cash_out_toolbar_title">Cash out</string>
    <string name="fragment_cash_out_token">Token</string>
    <string name="fragment_cash_out_to">To (Wallet Address)</string>
    <string name="fragment_cash_out_memo">Memo</string>
    <string name="fragment_cash_out_amount">Amount</string>
    <string name="fragment_cash_out_network_fee">Network Fee</string>
    <string name="fragment_cash_out_button_confirm">Confirm</string>

    <string name="settings_jobs">Jobs</string>
    <string name="settings_profile">Profile</string>
    <string name="settings_data_sources">Data Sources</string>
    <string name="settings_currency">Currency</string>
    <string name="settings_logout">Logout</string>

    <string name="settings_profile_login_info">Login Info</string>
    <string name="settings_profile_personal_info">Personal Info</string>
    <string name="settings_profile_email">Email</string>
    <string name="settings_profile_button_update">Update my profile</string>

    <string name="settings_job_desc">Please tell us when it’s okay to run jobs on your device</string>
    <string name="settings_job_title_auto_run">Auto run incoming jobs</string>
    <string name="settings_job_title_connect_to_wifi">When connected to Wifi</string>
    <string name="settings_job_desc_connect_to_wifi">Use this option to save data</string>
    <string name="settings_job_title_power_source">When using power source</string>
    <string name="settings_job_desc_power_source">Use this option to save battery life</string>

    <string name="settings_data_source_desc">For the best experience with DML, you need to connect some of your data sources. You’ll be able to revoke access at any time.</string>

    <string name="settings_currency_desc">Please select which fiat currency you’d like to display by default.</string>


    <string name="fragment_backup_toolbar_title">Backup Recovery Phrase</string>
    <string name="fragment_backup_seed_phrase_desc">This is your recovery phrase. You use it to prove that this is your wallet. You only get to see it once! Copy and store it in a secure place. You will need it if you lose or reinstall your wallet.</string>
    <string name="fragment_backup_seed_phrase_button_copy">Copy to clipboard</string>
    <string name="fragment_backup_seed_phrase_button_copied">Copied! Next</string>

    <string name="fragment_backup_confirm_toolbar_title">Confirm Recovery Phrase</string>
    <string name="fragment_backup_seed_phrase_confirm_desc">In order to check if you have backed up your recovery phrase correctly, enter the correct words below</string>
    <string name="fragment_backup_seed_phrase_button_submit">Submit</string>

    <string name="activity_camera_title">Center receipt in frame and take photo</string>
</resources>
