<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/signUpButton"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_dml_logo" />

        <com.dml.base.view.custom.ThemeTextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iconImageView"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/welcome_title"
            android:textColor="@color/text_title"
            android:textSize="24dp"
            app:appFontStyle="barlow_medium" />

        <com.dml.base.view.custom.ThemeTextView
            android:id="@+id/descTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleTextView"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/welcome_desc"
            android:textColor="@color/text_dark" />

    </LinearLayout>

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_above="@id/signUpButton"-->
    <!--android:layout_below="@id/descTextView"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:gravity="center"-->
    <!--android:visibility="gone">-->

    <!--<ImageView-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="fill_parent"-->
    <!--android:layout_margin="16dp"-->
    <!--android:adjustViewBounds="true"-->
    <!--android:src="@drawable/img_welcome_logo" />-->
    <!--</LinearLayout>-->

    <com.dml.base.view.custom.CustomThemeButton
        android:id="@+id/signUpButton"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_above="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <com.dml.base.view.custom.ThemeTextView
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/welcome_button_login"
        android:textColor="@color/text_green"
        android:textSize="18dp"
        app:appFontStyle="barlow_semibold" />
</RelativeLayout>