<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.dml.base.view.custom.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/contentScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never">

            <LinearLayout
                android:id="@+id/contentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <com.dml.base.view.custom.ThemeTextView
                    style="@style/AppTheme.TextView.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_transaction_detail_to"
                    app:appFontStyle="barlow_semibold" />

                <com.dml.base.view.custom.ThemeTextView
                    android:id="@+id/toAddressTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="{708923i4ugiuawe0f87jhkakuhg09as8doqi234oi}"
                    app:appFontStyle="barlow_medium" />

                <com.dml.base.view.custom.ThemeTextView
                    style="@style/AppTheme.TextView.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/fragment_transaction_detail_memo"
                    app:appFontStyle="barlow_semibold" />

                <com.dml.base.view.custom.ThemeTextView
                    android:id="@+id/memoTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="{DML Permissions Bonus}"
                    app:appFontStyle="barlow_medium" />

                <com.dml.base.view.custom.ThemeTextView
                    style="@style/AppTheme.TextView.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/fragment_transaction_detail_time"
                    app:appFontStyle="barlow_semibold" />

                <com.dml.base.view.custom.ThemeTextView
                    android:id="@+id/timeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="{Thu Sep 27 8:09PM}"
                    app:appFontStyle="barlow_medium" />

                <com.dml.base.view.custom.ThemeTextView
                    style="@style/AppTheme.TextView.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/fragment_transaction_detail_network_fee"
                    app:appFontStyle="barlow_semibold" />

                <com.dml.base.view.custom.ThemeTextView
                    android:id="@+id/networkFeeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="{0 ETH  ($0)}"
                    app:appFontStyle="barlow_medium" />

                <com.dml.base.view.custom.ThemeTextView
                    style="@style/AppTheme.TextView.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/fragment_transaction_detail_currency"
                    app:appFontStyle="barlow_semibold" />

                <com.dml.base.view.custom.ThemeTextView
                    android:id="@+id/currencyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="{- 0.00054 BTC}"
                    app:appFontStyle="barlow_medium" />

                <com.dml.base.view.custom.ThemeTextView
                    style="@style/AppTheme.TextView.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/fragment_transaction_detail_transaction_hash"
                    app:appFontStyle="barlow_semibold" />

                <com.dml.base.view.custom.ThemeTextView
                    android:id="@+id/transactionHashTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_green_hollow"
                    android:gravity="center"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:text="{as9876d8fyh3klj4jr98a09wofji20ai}"
                    android:textColor="@color/colorAccent"
                    app:appFontStyle="barlow_semibold" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <!--<com.dml.base.view.custom.CustomThemeButton-->
            <!--android:id="@+id/cancelPendingButton"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="48dp"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_margin="16dp"-->
            <!--app:appFontStyle="barlow_semibold" />-->
    </RelativeLayout>
</LinearLayout>