<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/fbSignUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_facebook_signup" />

            <ImageView
                android:id="@+id/googleSignUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_google_signup" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_centerInParent="true"
                    android:layout_weight="1"
                    android:background="@color/divider" />

                <com.dml.base.view.custom.ThemeTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:text="@string/fragment_signup_or"
                    android:textColor="@color/divider"
                    android:textSize="12dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_centerInParent="true"
                    android:layout_weight="1"
                    android:background="@color/divider" />
            </LinearLayout>

            <com.dml.base.view.custom.ThemeTextView
                style="@style/AppTheme.EditText.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/fragment_signup_email"
                app:appFontStyle="barlow_semibold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.SignUp.InputLayout">

                <com.dml.base.view.custom.ThemeEditText
                    android:id="@+id/emailEditText"
                    style="@style/AppTheme.SignUp.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.dml.base.view.custom.ThemeTextView
                style="@style/AppTheme.EditText.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:text="@string/fragment_signup_password"
                app:appFontStyle="barlow_semibold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.SignUp.InputLayout"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/edittext_title">

                <com.dml.base.view.custom.ThemeEditText
                    android:id="@+id/passwordEditText"
                    style="@style/AppTheme.SignUp.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.dml.base.view.custom.ThemeTextView
                style="@style/AppTheme.EditText.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:text="@string/fragment_signup_referral_code"
                app:appFontStyle="barlow_semibold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.SignUp.InputLayout"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/edittext_title">

                <com.dml.base.view.custom.ThemeEditText
                    android:id="@+id/referralCodeEditText"
                    style="@style/AppTheme.SignUp.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/agreeCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <com.dml.base.view.custom.ThemeTextView
                        android:id="@+id/agreeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/agree_tnc"
                        android:textSize="14dp"
                        app:appFontStyle="barlow_medium" />

                    <com.dml.base.view.custom.ThemeTextView
                        android:id="@+id/learnMoreTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/fragment_signup_learn_more"
                        android:textColor="@color/text_green"
                        android:textSize="14dp"
                        app:appFontStyle="barlow_medium" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.dml.base.view.custom.CustomThemeButton
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        app:appFontStyle="barlow_semibold" />
</LinearLayout>